Added get calender events functionality
