# docs/swagger.yaml
@@ -1,5 +1,38 @@
 basePath: /
 definitions:
+  model.Attribute:
+    properties:
+      all_day_event:
+        type: boolean
+      ends_at:
+        type: string
+      image_url:
+        type: string
+      name:
+        type: string
+      open_graph_description:
+        type: string
+      recurrence_description:
+        type: string
+      recurring:
+        type: boolean
+      starts_at:
+        type: string
+    type: object
+  model.Event:
+    properties:
+      attributes:
+        $ref: '#/definitions/model.Attribute'
+      id:
+        type: string
+    type: object
+  model.EventReponse:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/model.Event'
+        type: array
+    type: object
   model.HTTPError:
     properties:
       code:
@@ -371,6 +404,42 @@ info:
   title: Momentum API
   version: v1
 paths:
+  /api/v1/events:
+    get:
+      consumes:
+      - application/json
+      description: Used to get all events scheduled on the church calender
+      parameters:
+      - description: Provide a bearer token
+        example: Bearer XXX-xxx-XXX-xxx-XX
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/model.EventReponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/model.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/model.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/model.HTTPError'
+      summary: Get all Calender Events
+      tags:
+      - Events
   /api/v1/meals:
     get:
       consumes:
